--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="node_modules/less/dist/less.min.js"></script>
 
     <script src="node_modules/material-design-lite/material.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
