Read configuration from file with special class

--- a/index.html
+++ b/index.html
@@ -21,9 +21,20 @@
             </div>
             <div class="mdl-cell mdl-cell--12-col">
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="serverProrocol">
+                    <label class="mdl-textfield__label" for="serverProrocol">Server Protocol</label>
+                </div>
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                     <input class="mdl-textfield__input" type="text" id="serverAddress">
                     <label class="mdl-textfield__label" for="serverAddress">Server Address</label>
                 </div>
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="serverPort">
+                    <label class="mdl-textfield__label" for="serverPort">Server Port</label>
+                </div>
+            </div>
+            <div class="mdl-cell mdl-cell--12-col">
+                <p id="errorPlace"></p>
             </div>
         </div>
     </div>
