Display test button, show test notification window

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 </div>
             </div>
             <div class="mdl-cell mdl-cell--12-col">
+                <button id="notifyCheck" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                    Check Notification
+                </button>
+            </div>
+            <div class="mdl-cell mdl-cell--12-col">
                 <p id="errorPlace"></p>
             </div>
         </div>
