--- a/notification.html
+++ b/notification.html
@@ -10,10 +10,12 @@
     <script src="node_modules/less/dist/less.min.js"></script>
 
     <script src="node_modules/material-design-lite/material.min.js"></script>
-    <script src="app.js"></script>
 </head>
 <body>
 <div class="message-body" id="logger">
+    <button class="mdl-button mdl-js-button mdl-button--icon notification-close-icon" id="closeButton" onclick="window.close();">
+        <i class="material-icons">close</i>
+    </button>
     <div class="icon-place">
         <i class="material-icons">phone_in_talk</i>
     </div>
