Classes for generate notification window and notification message

--- a/notification.html
+++ b/notification.html
@@ -10,16 +10,19 @@
     <script src="node_modules/less/dist/less.min.js"></script>
 
     <script src="node_modules/material-design-lite/material.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
-<div class="message-body" id="logger">
+<div class="message-wrapper">
     <button class="mdl-button mdl-js-button mdl-button--icon notification-close-icon" id="closeButton" onclick="window.close();">
         <i class="material-icons">close</i>
     </button>
-    <div class="icon-place">
-        <i class="material-icons">phone_in_talk</i>
+    <div class="message-body">
+        <div class="icon-place">
+            <i id="notify-icon" class="material-icons">phone_in_talk</i>
+        </div>
+        <div class="text-place"></div>
     </div>
-    <div class="text-place"></div>
 </div>
 </body>
 </html>
