Open / close notification window functions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="app.js"></script>
 </head>
-<body>
+<body class="animated">
     <div class="mdl-layout mdl-js-layout">
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--12-col">
