Right way to close notification window

--- a/notification.html
+++ b/notification.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="message-wrapper">
-    <button class="mdl-button mdl-js-button mdl-button--icon notification-close-icon" id="closeButton" onclick="window.close();">
+    <button class="mdl-button mdl-js-button mdl-button--icon notification-close-icon" id="closeButton">
         <i class="material-icons">close</i>
     </button>
     <div class="message-body">
